--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,8 +3,8 @@ unbind C-b
 set -g prefix C-a
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
-bind + splitw -v -c '#{pane_current_path}'
-bind - splitw -h -c '#{pane_current_path}'
+bind - splitw -v -c '#{pane_current_path}'
+bind = splitw -h -c '#{pane_current_path}'
 setw -g mode-keys vi
 # bind move among windows like vim
 bind -r h select-pane -L
