restore default prefix Ctrl-b

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # change default Ctrl-b -> Ctrl-a
 unbind C-b
-set -g prefix C-a
+set -g prefix C-b
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 bind - splitw -v -c '#{pane_current_path}'
